# verifier-in-icp

./: .gitmodules  README.md
send_http_get/src/send_http_get_backend/: Cargo.toml  send_http_get_backend.did
send_http_get/src/send_http_get_backend/miden-winter-wasm/miden/: Cargo.toml
send_http_get/src/send_http_get_backend/miden-winter-wasm/miden/src/: lib-arb.rs  lib.rs
send_http_get/src/send_http_get_backend/src/: lib.rs
