[package]
name = "send_http_get_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
miden-vm = { path = "./miden-winter-wasm/miden", version = "0.5.0"}





candid = { version = "0.9" }
ic-canister-log = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "release-2023-09-27_23-01" }
ic-metrics-encoder = "1.1"
ic-stable-structures = "0.5"
ic-certified-map = "0.4"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
ic-cdk-bindgen = "0.1"
ic-eth = "0.1.0"

cketh-common = { git = "https://github.com/rvanasa/ic", rev = "e9bf2ad9decb97f9fefb8190719c69c0281aef37", package = "ic-cketh-minter" }
maplit = "1.0"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "2.4"
async-trait = "0.1"
hex = "0.4"

[profile.release]
lto = true
opt-level = 's'

