[package]
name = "send_http_get_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
miden-vm = { path = "./miden-winter-wasm/miden", version = "0.5.0"}
candid = { version = "0.9" }
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
ic-web3 = "0.1.7"
hex = "0.4"

[profile.release]
lto = true
opt-level = 's'

